--- a/client/screens/project_screen.kv
+++ b/client/screens/project_screen.kv
@@ -116,32 +116,39 @@
     project_name: self.project_name
     project_id: self.project_id
     image: self.image
+    total_images: self.total_images
+    labeled_images: self.labeled_images
+    last_update_time: self.last_update_time
+    last_update_label: last_update_label
     FloatLayout:
         BoxLayout:
             pos_hint:{"x": 0.00, "y": 0.00}
             orientation: "vertical"
-            spacing: 16
-
+            canvas:
+                Color:
+                    rgba: 1, 0, 0, 1
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
             BoxLayout:
-                canvas:
-                    Color:
-                        rgba: 1, 0, 0, 1
-                    Rectangle:
-                        pos: self.pos
-                        size: self.size
                 Label:
                     text: root.image
-
             BoxLayout:
-                size_hint: (1, 0.35)
-                canvas:
-                    Color:
-                        rgba: 1, 0, 0, 1
-                    Rectangle:
-                        pos: self.pos
-                        size: self.size
+                size_hint: (1, 0.3)
                 Label:
                     text: root.project_name
+            ProgressBar:
+                max: 100
+                value: 50
+                size_hint: (1, 0.15)
+            Label:
+                id: last_update_label
+                size_hint: (1, 0.2)
+                markup: True
+                font_size: "14dp"
+                text: "Updated [b][color=3AD6E7]5 minutes[/color][/b] ago"
+
+
         Button:
             pos_hint:{"x": 0.9, "y": 0.9}
             size_hint: (0.1, 0.1)
@@ -149,14 +156,14 @@
             on_release: root.confirm_delete_project()
 
 <ProjectViewWindow>:
-    col_default_width: 150
+    col_default_width: 180
     col_force_default: True
-    row_default_height: 200
+    row_default_height: 250
     row_force_default: True
 
     spacing: 16
     padding: (16, 8, 16, 16)
-    cols: int((self.width - self.padding[0]) / (150 + self.spacing[0]))
+    cols: int((self.width - self.padding[0]) / (self.col_default_width + self.spacing[0]))
 
 <ProjectScreen>:
     control_bar: control_bar
