Add Project Tool Screen Layout

--- a/client/screens/project_select_screen.kv
+++ b/client/screens/project_select_screen.kv
@@ -121,7 +121,7 @@
     tile_height: 200
 
 
-<ProjectScreen>:
+<ProjectSelectScreen>:
     control_bar: control_bar
     project_view_window: project_view_window
     BoxLayout:
