Add file dialog

--- a/client/screens/project_tool_screen.kv
+++ b/client/screens/project_tool_screen.kv
@@ -21,5 +21,6 @@
             spacing: 32
             Button:
                 text: "Add Images"
+                on_release: root.open_file_chooser()
             Button:
                 text: "View Images"
