--- a/client/screens/project_select_screen.kv
+++ b/client/screens/project_select_screen.kv
@@ -83,38 +83,42 @@
     labeled_images: self.labeled_images
     last_update_time: self.last_update_time
     last_update_label: last_update_label
-    FloatLayout:
-        BoxLayout:
-            pos_hint:{"x": 0.00, "y": 0.00}
-            orientation: "vertical"
-            canvas:
-                Color:
-                    rgba: 1, 0, 0, 1
-                Rectangle:
-                    pos: self.pos
-                    size: self.size
+    Button:
+        on_release: app.show_project_tools(root.project_name, root.project_id)
+        FloatLayout:
+            size: root.size
+            pos: root.pos
             BoxLayout:
+                pos_hint:{"x": 0.00, "y": 0.00}
+                orientation: "vertical"
+                canvas:
+                    Color:
+                        rgba: 1, 0, 0, 1
+                    Rectangle:
+                        pos: self.pos
+                        size: self.size
+                BoxLayout:
+                    Label:
+                        text: root.image
+                BoxLayout:
+                    size_hint: (1, 0.3)
+                    Label:
+                        text: root.project_name
+                ProgressBar:
+                    max: root.total_images
+                    value: root.labeled_images
+                    size_hint: (1, 0.15)
                 Label:
-                    text: root.image
-            BoxLayout:
-                size_hint: (1, 0.3)
-                Label:
-                    text: root.project_name
-            ProgressBar:
-                max: root.total_images
-                value: root.labeled_images
-                size_hint: (1, 0.15)
-            Label:
-                id: last_update_label
-                size_hint: (1, 0.2)
-                markup: True
-                font_size: "13dp"
-                text: "Updated [b][color=3AD6E7]5 minutes[/color][/b] ago"
-        Button:
-            pos_hint:{"x": 0.9, "y": 0.9}
-            size_hint: (0.1, 0.1)
-            text: "X"
-            on_release: root.confirm_delete_project()
+                    id: last_update_label
+                    size_hint: (1, 0.2)
+                    markup: True
+                    font_size: "13dp"
+                    text: "Updated [b][color=3AD6E7]5 minutes[/color][/b] ago"
+            Button:
+                pos_hint:{"x": 0.9, "y": 0.9}
+                size_hint: (0.1, 0.1)
+                text: "X"
+                on_release: root.confirm_delete_project()
 
 <ProjectViewWindow>:
     tile_width: 150
