Fix Alert scaling

--- a/client/screens/common.kv
+++ b/client/screens/common.kv
@@ -16,8 +16,9 @@
         AnchorLayout:
             anchor_x: 'center'
             anchor_y: 'bottom'
+            size_hint: (1, 0.2)
             Button:
-                size_hint: (0.3, 0.2)
+                size_hint_x: 0.3
                 text: 'Ok'
                 on_release: root.dismiss()
 
