Add Instance Annotator Screen and add connection retry and timeout

--- a/client/screens/project_tool_screen.kv
+++ b/client/screens/project_tool_screen.kv
@@ -26,3 +26,6 @@
             Button:
                 text: "View Images"
                 on_release: app.show_image_viewer()
+            Button:
+                text: "Instance Annotator"
+                on_release: app.open_instance_annotator()
