Add Class Picker and Tool Options

--- a/client/screens/instance_annotator_screen.kv
+++ b/client/screens/instance_annotator_screen.kv
@@ -26,8 +26,9 @@
                 id: right_control
                 size_hint_x: 350 / root.width
 
-
 <LeftControlColumn>:
+    tool_select: tool_select
+    color_picker: color_picker
     orientation: "vertical"
     canvas:
         Color:
@@ -36,22 +37,78 @@
             pos: self.pos
             size: self.size
     ToolSelect:
+        id: tool_select
         size_hint_y: 400 / root.height
 
     ClassPicker:
+        id: color_picker
         size_hint_y: 400 / root.height
-
     LayerView:
 
 <ToolSelect>:
-    Button:
+    cols: 1
+    Label:
+        text: "Tool Options"
+        size_hint_y: None
+        height: 50
+    BoxLayout:
+        orientation: "horizontal"
+        size_hint_y: None
+        height: 30
+        Label:
+            text: "pen size"
+        NumericInput:
+            value: 10
+            step: 5
+            on_value: root.set_pencil_size(self.value)
+    BoxLayout:
+        orientation: "horizontal"
+        size_hint_y: None
+        height: 30
+        Label:
+            text: "alpha"
+        NumericInput:
+            min: 0.0
+            max: 1.0
+            value: 1.0
+            step: 0.1
+            on_value: root.set_alpha(self.value)
 
 <ClassPicker>:
-    Button:
+    cols: 1
+    Label:
+        text: "Class Picker"
+        size_hint_y: None
+        height: 50
+    GridLayout:
+        cols: 2
+        ClassPickerItem:
+            class_name: "Green"
+            class_color: (0.3, 0.8, 0.2, 1)
+        ClassPickerItem:
+            class_name: "Purple"
+            class_color: (0.5, 0.3, 0.9, 1)
+        ClassPickerItem:
+            class_name: "Red"
+            class_color: (0.9, 0.2, 0.2, 1)
+        ClassPickerItem:
+            class_name: "Blue"
+            class_color: (0.4, 0.7, 0.9, 1)
+
+<ClassPickerItem>
+    class_color: self.class_color
+    class_name: self.class_name
+    class_id: self.class_id
+
+    background_color: root.class_color
+    background_down: ''
+    size_hint_y: None
+    height: 50
+    text: self.class_name
+    on_release: app.root.current_screen.left_control.tool_select.set_color(self.class_color)
 
 <LayerView>:
     Button:
-
 
 <ImageCanvas>:
     image: image
@@ -84,9 +141,6 @@
     canvas.before:
         Color:
             rgba: root.col
-
-
-
 
 <RightControlColumn>:
     image_queue: image_queue
@@ -128,7 +182,6 @@
         height: 50
         on_release: app.root.current_screen.refresh_image_queue()
 
-
 <ImageQueue>:
     queue: queue
     cols: 1
@@ -139,7 +192,6 @@
     GridLayout:
         id: queue
         cols: 1
-
 
 <ImageQueueItem>:
     image_name: self.image_name
