--- a/client/screens/common.kv
+++ b/client/screens/common.kv
@@ -1,3 +1,6 @@
+#:import utils kivy.utils
+#:import ClientConfig client.client_config.ClientConfig
+
 <Alert>:
     size_hint: None, None
     size: app.root.width/3, app.root.height/3
@@ -44,3 +47,35 @@
     spacing: 16
     padding: 16
     cols: int((self.width - self.padding[0]) / (self.col_default_width + self.spacing[0]))
+
+<NumericInput>:
+    decimal_places: 2
+    text_input: text_input
+    TextInput:
+        id: text_input
+        size_hint_x: None
+        width: root.width - 20
+        text: str(root.value)
+        multiline: False
+        halign: 'center'
+        valign: 'center'
+        on_text_validate: root.validate_user_input()
+    BoxLayout:
+        size_hint_x: None
+        width: 20
+        orientation: 'vertical'
+        padding: 1
+        Button:
+            text: '+'
+            disabled: root.value >= root.max
+            on_release:
+                root.value += root.step
+                root.value = min(root.value, root.max)
+                root.value = round(root.value, root.decimal_places)
+        Button:
+            text: '-'
+            disabled: root.value <= root.min
+            on_release:
+                root.value -= root.step
+                root.value = max(root.value, root.min)
+                root.value = round(root.value, root.decimal_places)
