--- a/client/screens/common.kv
+++ b/client/screens/common.kv
@@ -69,13 +69,9 @@
             text: '+'
             disabled: root.value >= root.max
             on_release:
-                root.value += root.step
-                root.value = min(root.value, root.max)
-                root.value = round(root.value, root.decimal_places)
+                root.value = round(min(root.value + root.step, root.max), root.decimal_places)
         Button:
             text: '-'
             disabled: root.value <= root.min
             on_release:
-                root.value -= root.step
-                root.value = max(root.value, root.min)
-                root.value = round(root.value, root.decimal_places)
+                root.value = round(max(root.value - root.step, root.min), root.decimal_places)
