--- a/client/screens/project_select_screen.kv
+++ b/client/screens/project_select_screen.kv
@@ -139,5 +139,6 @@
                     with_previous: False
         ControlBar:
             id: control_bar
-        ProjectViewWindow:
-            id: project_view_window
+        ScrollView:
+            ProjectViewWindow:
+                id: project_view_window
